# 3d_coverage_path_planning

./: .gitignore  3d_coverage_path_planning.rosinstall  LICENSE  README.md
three_dimensional_coverage_path_planning/: CMakeLists.txt  candidate_generator_plugins.xml  data_recorder_plugins.xml  package.xml  path_planner_plugins.xml  viewpoint_selector_plugins.xml  visibility_checker_plugins.xml
three_dimensional_coverage_path_planning/config/: general.yaml  mesh_nav_map.yaml
three_dimensional_coverage_path_planning/config/data_recording/: general.yaml  lidar.yaml
three_dimensional_coverage_path_planning/config/model/: general.yaml  sdf.yaml  target_point_cloud.yaml
three_dimensional_coverage_path_planning/config/viewpoint_computation/: aico_spot_vlp16_robot_body_filter_config.yaml  asterix_vlp16_robot_body_filter_config.yaml  general.yaml  mesh_navigation_candidate_generator.yaml  octomap_checker.yaml  sensor_checker.yaml
three_dimensional_coverage_path_planning/config/waypoint_order_computation/: general.yaml  mesh_nav_planner.yaml
three_dimensional_coverage_path_planning/data/: office_one_lvl_remeshed_rotated.mtl
three_dimensional_coverage_path_planning/include/three_dimensional_coverage_path_planning/: three_dimensional_coverage_path_planning.h  three_dimensional_coverage_path_planning_actions.h
three_dimensional_coverage_path_planning/include/three_dimensional_coverage_path_planning/data_recording/: data_recorder_base.h  lidar_data_recorder.h
three_dimensional_coverage_path_planning/include/three_dimensional_coverage_path_planning/model/: building_model.h  model_data.h  real_world_model.h  sdf_map.h
three_dimensional_coverage_path_planning/include/three_dimensional_coverage_path_planning/path_execution/: path_executor.h
three_dimensional_coverage_path_planning/include/three_dimensional_coverage_path_planning/utils/: action_types.h  colors.h  file_utils.h  transformation_helper.h  types.h  utils.h  utils_with_types.h
three_dimensional_coverage_path_planning/include/three_dimensional_coverage_path_planning/viewpoint_computation/: reward_evaluator.h  viewpoint.h  viewpoint_computer.h
three_dimensional_coverage_path_planning/include/three_dimensional_coverage_path_planning/waypoint_order_computation/: mesh_navigation_path_planner.h  waypoint_order_computer.h
three_dimensional_coverage_path_planning/launch/: aico_spot.launch  asterix.launch  execute_three_dimensional_coverage_path_planning.launch  joint_and_robot_state_publisher.launch  precomputations_no_robot_three_dimensional_coverage_path_planning.launch  precomputations_sim_or_robot_three_dimensional_coverage_path_planning.launch  sim_three_dimensional_coverage_path_planning.launch  three_dimensional_coverage_path_planning.launch
three_dimensional_coverage_path_planning/rviz/: execution.rviz  precomputation.rviz
three_dimensional_coverage_path_planning/src/: three_dimensional_coverage_path_planning.cpp  three_dimensional_coverage_path_planning_actions.cpp  three_dimensional_coverage_path_planning_node.cpp
three_dimensional_coverage_path_planning/src/data_recording/: data_recorder_base.cpp  lidar_data_recorder.cpp
three_dimensional_coverage_path_planning/src/model/: building_model.cpp  model_data.cpp  real_world_model.cpp  sdf_map.cpp
three_dimensional_coverage_path_planning/src/path_execution/: path_executor.cpp
three_dimensional_coverage_path_planning/src/util/: transformation_helper.cpp
three_dimensional_coverage_path_planning/src/viewpoint_computation/: reward_evaluator.cpp  viewpoint.cpp  viewpoint_computer.cpp
three_dimensional_coverage_path_planning/src/viewpoint_computation/candidate_generator/: candidate_generator_base.cpp  (+1 more)
three_dimensional_coverage_path_planning/src/waypoint_order_computation/: mesh_navigation_path_planner.cpp  waypoint_order_computer.cpp
three_dimensional_coverage_path_planning/test/: all_tests.test  test_model_data.cpp  test_model_data.test  test_viewpoint_selector.cpp  test_viewpoint_selector.test
three_dimensional_coverage_path_planning/test/test_config/: general.yaml
three_dimensional_coverage_path_planning/test/test_selector_node/: test_selector_node.cpp  test_selector_node.launch
three_dimensional_coverage_path_planning_behaviors/: CMakeLists.txt  package.xml  setup.py
three_dimensional_coverage_path_planning_behaviors/manifest/: three_dimesional_coverage_path_planning_execute_path.xml  three_dimesional_coverage_path_planning_precomputations.xml  three_dimesional_coverage_path_planning_waypoint.xml
three_dimensional_coverage_path_planning_behaviors/src/three_dimensional_coverage_path_planning_behaviors/: three_dimesional_coverage_path_planning_execute_path_sm.py  three_dimesional_coverage_path_planning_precomputations_sm.py  three_dimesional_coverage_path_planning_waypoint_sm.py
three_dimensional_coverage_path_planning_msgs/: CMakeLists.txt  package.xml
three_dimensional_coverage_path_planning_msgs/action/: ExecuteRecoveryOn3dCoveragePath.action  FinishExecutionOf3dCoveragePath.action  InitializeExecutionOf3dCoveragePath.action  MoveToWaypointOf3dCoveragePath.action  Plan3dCoveragePathOnMesh.action  WaypointOf3dCoveragePathReached.action
three_dimensional_coverage_path_planning_msgs/msg/: MoveResultCode.msg  Path.msg  PointArray.msg  Viewpoint.msg  ViewpointArray.msg  Waypoint.msg
three_dimensional_coverage_path_planning_states/: CMakeLists.txt  package.xml  setup.py
three_dimensional_coverage_path_planning_states/src/three_dimensional_coverage_path_planning_states/: three_dimensional_coverage_path_planning_finish_state.py  three_dimensional_coverage_path_planning_initialize_state.py  three_dimensional_coverage_path_planning_load_path_state.py  three_dimensional_coverage_path_planning_move_to_waypoint_state.py  three_dimensional_coverage_path_planning_precomputation_state.py  three_dimensional_coverage_path_planning_recovery_state.py  three_dimensional_coverage_path_planning_rotate_circular_path_state.py  three_dimensional_coverage_path_planning_save_path_state.py  three_dimensional_coverage_path_planning_waypoint_reached_state.py
(+27 files in other folders)
