<?xml version="1.0"?>
<package format="2">
  <name>three_dimensional_coverage_path_planning_behaviors</name>
  <version>0.0.0</version>
  <description>The three_dimensional_coverage_path_planning_behaviors package</description>

  <maintainer email="oehler@sim.tu-darmstadt.de">Martin Oehler</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>flexbe_core</exec_depend>
  <exec_depend>flexbe_common_states</exec_depend>
  <exec_depend>three_dimensional_coverage_path_planning_states</exec_depend>
  <exec_depend>flexbe_states</exec_depend>

  <export>
    <flexbe_behaviors />
  </export>
</package>
