<?xml version="1.0"?>
<package format="2">
  <name>three_dimensional_coverage_path_planning_states</name>
  <version>0.0.0</version>
  <description>The three_dimensional_coverage_path_planning_states package</description>

  <maintainer email="oehler@sim.tu-darmstadt.de">Martin Oehler</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>flexbe_core</exec_depend>
  <exec_depend>three_dimensional_coverage_path_planning_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rospkg</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>rospy_message_converter</exec_depend>

  <export>
    <flexbe_states />
  </export>
</package>
